--- a/config.json
+++ b/config.json
@@ -1,7 +1,5 @@
 {
     "name": "Rally Iteration Health",
     "className": "rally-iteration-health",
-    "server": "https://rally1.rallydev.com",
-    "sdk": "2.0",
-    "apiKey": "_PUT_APIKEY_HERE_"
+    "sdk": "2.1"
 }
