--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "_comment": "This file is used by grunt",
-  "name": "rally-iteration-health",
+  "name": "tsabc",
   "version": "0.1.0",
   "dependencies": {},
   "devDependencies": {
@@ -9,6 +9,8 @@
     "grunt-contrib-jasmine": "~0.5.2",
     "grunt-templater": "git://github.com/rockwood/grunt-templater.git",
     "underscore": "1.4.4",
-    "grunt-contrib-uglify":"0.3.2"
+    "grunt-contrib-uglify":"0.3.2",
+    "request":"2.67",
+    "grunt-contrib-watch":"1.0.0"
   }
 }
